--- a/cloud-provider-azure-1.31.yaml
+++ b/cloud-provider-azure-1.31.yaml
@@ -1,7 +1,7 @@
 package:
   name: cloud-provider-azure-1.31
   version: 1.31.1
-  epoch: 0
+  epoch: 7
   description: Cloud provider for Azure
   copyright:
     - license: Apache-2.0
@@ -30,10 +30,13 @@ subpackages:
     name: cloud-provider-azure-${{range.key}}-${{vars.major-minor-version}}
     description: ${{range.value}}
     pipeline:
+      - uses: go/bump
+        with:
+          deps: github.com/golang-jwt/jwt/v4@v4.5.1
+          replaces: github.com/golang-jwt/jwt/v4=github.com/golang-jwt/jwt/v4@v4.5.1
       - uses: go/build
         with:
           packages: ./cmd/${{range.key}}
-          deps: github.com/golang-jwt/jwt/v4@v4.5.1
           ldflags: |
             -X sigs.k8s.io/cloud-provider-azure/pkg/version.gitVersion=v${{package.version}}
             -X k8s.io/client-go/pkg/version.gitVersion=v${{package.version}}
@@ -41,6 +44,9 @@ subpackages:
             -X k8s.io/client-go/pkg/version.gitCommit=$(git rev-parse HEAD)
             -X sigs.k8s.io/cloud-provider-azure/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
             -X k8s.io/client-go/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          # pipeline:
+          #   - runs: |
+          #       go mod vendor
           output: ${{range.key}}
 
   - range: cloud-provider-azure-packages
