--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -54,7 +54,8 @@ pipeline:
     with:
       opts: |
         --sbindir=/usr/lib/frr \
-        --localstatedir=/var/run/frr \
+        --localstatedir=/var \
+        --sysconfdir=/etc \
         --mandir=/usr/share/man \
         --infodir=/usr/share/info \
         --enable-rpki \
