A working version of karma with tests

--- a/karma.yaml
+++ b/karma.yaml
@@ -1,7 +1,7 @@
 # melange.yaml
 package:
   name: karma
-  version: "0.102"
+  version: "0.120"
   description: "A dashboard for managing alerts from Alertmanager"
   epoch: 0
   copyright:
@@ -10,11 +10,10 @@ package:
 environment:
   contents:
     packages:
-      - bash
-      - build-base
       - busybox
       - ca-certificates-bundle
       - go
+      - nodejs
       - npm
 
 pipeline:
@@ -22,12 +21,45 @@ pipeline:
     with:
       repository: https://github.com/prymitive/karma.git
       tag: v${{package.version}}
-      expected-commit: 78dd259c5eb3d17979ed742317f1643e3411c159
+      expected-commit: 8009f4aa581980654e5c67b26b41e85d9e7ccce0
 
-  - name: install-yarn-dependencies
+  - name: install-npm-dependencies
     working-directory: ui
     pipeline:
       - runs: |
-          mkdir -p node_modules/.install
+          mkdir -p node_modules/.bin
+          touch node_modules/.install
           npm install --package-lock-only
-          npm ci --production
+          npm ci
+          cat node_modules/bootstrap/scss/_root.scss | sed s/':root {'/'* {'/ > src/Styles/BootstrapRoot.scss
+          npm run build
+
+  - name: Copy build files
+    runs: |
+      cp -r ui/src ./ui/dist ./ui/mock ./ui/embed.go .
+
+  - uses: go/build
+    with:
+      modroot: cmd/${{package.name}}
+      packages: .
+      ldflags: -X main.version=${{package.version}}
+      output: ${{package.name}}
+
+test:
+  pipeline:
+    - name: Run Karma test
+      runs: |
+        karma --version
+    - name: "Check karma status"
+      uses: test/daemon-check-output
+      with:
+        start: "${{package.name}}"
+        timeout: 60
+        expected_output: |
+          Starting HTTP server
+
+update:
+  enabled: true
+  github:
+    identifier: prymitive/karma
+    strip-prefix: v
