zetasql: checkpoint this is to see if CI works the same as locally, need to figure out the bazel cache issue and absil gcc error this should cause
Signed-off-by: James Rawlings <jrawlings@chainguard.dev>

--- a/zetasql.yaml
+++ b/zetasql.yaml
@@ -18,7 +18,8 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - gcc
+      - cmake
+      - gcc-12-default
       - git
       - glibc-locale-en # This fixes the build failure with UTF-8 filenames, see wolfi-dev/os#26865
       - openjdk-17
@@ -29,10 +30,11 @@ environment:
       - tzdata
       - wolfi-baselayout
   environment:
-    BAZEL_ARGS: "--config=g++"
-    EXTRA_BAZEL_ARGS: "--tool_java_runtime_version=local_jdk"
+    BAZEL_ARGS: "--config=g++ --cxxopt=-std=c++17 --host_cxxopt=-std=c++17 --tool_java_runtime_version=local_jdk"
     JAVA_HOME: /usr/lib/jvm/java-17-openjdk
-    LANG: en_US.UTF-8 # Added as a potential fix for UTF-8 filenames, doesn't seem to have any effect
+    LANG: en_US.UTF-8
+    CC: gcc
+    CXX: g++
 
 pipeline:
   - uses: git-checkout
@@ -46,9 +48,23 @@ pipeline:
       patches: multi-arch-for-linux.patch
 
   - runs: |
-      cd zetasql
-      bazel build --verbose_failures ${BAZEL_ARGS} $EXTRA_BAZEL_ARGS -c opt ...
-      # TODO need to copy whats required after this from either bazel-bin or bazel-out
+      # odd permisson issue with bazel cache DONT MERGE UNTIL FIGURED OUT
+      mkdir -p .cache/bazel/_bazel_root
+      chmod -R 755 .cache/bazel/_bazel_root
+
+      # DONT MERGE UNTIL FIGURED OUT
+      attempt=1
+      while [ $attempt -le 15 ]; do
+        echo "Attempt $attempt of 10..."
+        if bazel build --verbose_failures $BAZEL_ARGS -c opt zetasql/...; then
+          echo "Build succeeded on attempt $attempt!"
+          break
+        fi
+        echo "Build failed on attempt $attempt"
+        attempt=$(( attempt + 1 ))
+        [ $attempt -le 15 ] && sleep 2
+      done
+      [ $attempt -le 15 ] || exit 1
 
   - uses: strip
 
