--- a/ruby-3.4.yaml
+++ b/ruby-3.4.yaml
@@ -76,9 +76,7 @@ pipeline:
          --with-system-ffi \
          --with-system-libmpdec \
          --without-ensurepip \
-         --enable-yjit \
-         --enable-rubygems
-      make update-bundled_gems
+         --enable-yjit
 
   - uses: autoconf/make
 
