cython-0: fixup deps for tests

--- a/cython-0.yaml
+++ b/cython-0.yaml
@@ -8,6 +8,8 @@ package:
   dependencies:
     provides:
       - cython=${{package.version}}-r${{package.epoch}}
+    runtime:
+      - python3
 
 environment:
   contents:
@@ -28,8 +30,8 @@ pipeline:
       tag: ${{package.version}}
 
   - runs: |
-      python setup.py build
-      python setup.py install --prefix=/usr --root="${{targets.destdir}}"
+      python3 setup.py build
+      python3 setup.py install --prefix=/usr --root="${{targets.destdir}}"
 
   - uses: strip
 
