--- a/keda-2.15.yaml
+++ b/keda-2.15.yaml
@@ -28,9 +28,9 @@ pipeline:
       repository: https://github.com/kedacore/keda
       tag: v${{package.version}}
 
-  - uses: go/bump
-    with:
-      deps: github.com/golang-jwt/jwt/v4@v4.5.1
+  - runs: |
+      go get github.com/golang-jwt/jwt/v4@v4.5.1
+      go mod tidy
 
   - runs: |
       ARCH=$(go env GOARCH) make build
