--- a/ruby3.2-traces.yaml
+++ b/ruby3.2-traces.yaml
@@ -44,6 +44,37 @@ pipeline:
 
   - uses: ruby/clean
 
+test:
+  pipeline:
+    - name: Validate import
+      runs: ruby -e "require 'traces'"
+    - name: Basic example
+      runs: |
+        cat > example.rb <<EOF
+        require 'traces'
+
+        class MyClass
+          def my_method
+            puts "Hello World"
+          end
+        end
+
+        Traces::Provider(MyClass) do
+          def my_method
+            attributes = {
+              'foo' => 'bar'
+            }
+
+            Traces.trace('my_method', attributes: attributes) do
+              super
+            end
+          end
+        end
+
+        MyClass.new.my_method
+        EOF
+        ruby example.rb
+
 update:
   enabled: true
   github:
