--- a/argo-cd-2.13.yaml
+++ b/argo-cd-2.13.yaml
@@ -26,6 +26,10 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 347f221adba5599ef4d5f12ee572b2c17d01db4d
 
+  - uses: go/bump
+    with:
+      deps: github.com/golang-jwt/jwt/v4@v4.5.1
+
   - runs: |
       cd ui
       yarn install
