feat(test): add basic melange level test
it is a basi melange level test running the help command and check the expected output

Signed-off-by: debasishbsws <debasishbsws.dev@gmail.com>

--- a/kubeadm-bootstrap-controller.yaml
+++ b/kubeadm-bootstrap-controller.yaml
@@ -37,3 +37,17 @@ update:
     strip-prefix: v
     tag-filter: v
     use-tag: true
+
+test:
+  pipeline:
+    - runs: |
+        OUTPUT=$(kubeadm-bootstrap-controller --help 2>&1 || true)
+        # Display the output
+        echo "$OUTPUT"
+        # Check if the output contains the expected help message
+        if echo "$OUTPUT" | grep -q "Usage of kubeadm-bootstrap-controller:"; then
+            echo "Help flag output detected as expected."
+        else
+            echo "Help flag did not produce the expected output."
+            exit 1
+        fi
