Trivial ruby3.2 packages for require tests

--- a/ruby3.2-json.yaml
+++ b/ruby3.2-json.yaml
@@ -2,7 +2,7 @@
 package:
   name: ruby3.2-json
   version: 2.7.6
-  epoch: 0
+  epoch: 1
   description: This is a JSON implementation as a Ruby extension in C.
   copyright:
     - license: Ruby
@@ -41,6 +41,9 @@ vars:
 test:
   pipeline:
     - runs: ruby -e "require 'json'"
+    - uses: ruby/require
+      with:
+        module_name: json
 
 update:
   enabled: true
