--- a/ruby3.2-mime-types-data.yaml
+++ b/ruby3.2-mime-types-data.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby3.2-mime-types-data
   version: 3.2024.1001
-  epoch: 1
+  epoch: 2
   description: MIME Type registry data
   copyright:
     - license: MIT
@@ -41,6 +41,9 @@ test:
   pipeline:
     - runs: |
         ruby -e "require 'mime-types-data'"
+    - uses: ruby/require
+      with:
+        module_name: mime-types-data
 
 update:
   enabled: true
