Address PR feedback
Signed-off-by: Luke Young <91491244+lyoung-confluent@users.noreply.github.com>

--- a/openssl.yaml
+++ b/openssl.yaml
@@ -19,8 +19,8 @@ package:
       # However, the version of OpenSSL must match exactly or the CLI will crash due to missing symbols
       # Example: '/usr/lib/libcrypto.so.3: version `OPENSSL_3.4.0' not found (required by openssl)'
       # To avoid this, we explicitly pin the versions of libcrypto3 and libssl3 to match the CLI version
-      - libcrypto3=${{package.full-version}}
-      - libssl3=${{package.full-version}}
+      - libcrypto3>=${{package.version}}
+      - libssl3>=${{package.version}}
 
 environment:
   contents:
