Add robotest for tflint
Signed-off-by: Josh Wolf <josh@wolfs.io>

--- a/tflint.yaml
+++ b/tflint.yaml
@@ -37,8 +37,83 @@ update:
     strip-prefix: v
 
 test:
+  environment:
+    contents:
+      packages:
+        - bash
+        - coreutils
   pipeline:
-    - name: version check
+    - name: "Version check"
       runs: |
         tflint --version
+    - name: "Help output verification"
+      runs: |
         tflint --help
+    - name: "Verify linting passes with valid configuration"
+      runs: |
+        cat > main.tf <<EOF
+        terraform {
+          required_version = ">= 1.0.0"
+          required_providers {
+            aws = {
+              source  = "hashicorp/aws"
+              version = "~> 4.0"
+            }
+          }
+        }
+
+        resource "aws_instance" "example" {
+          ami           = "ami-12345678"
+          instance_type = "t2.micro"
+        }
+        EOF
+        tflint
+    - name: "Expected failure: missing required_providers"
+      runs: |
+        cat > missing_providers.tf <<EOF
+        resource "aws_instance" "example" {
+          ami           = "ami-12345678"
+          instance_type = "t2.micro"
+        }
+        EOF
+        if tflint missing_providers.tf; then
+          echo "Expected linting to fail but it passed"
+          exit 1
+        fi
+    - name: "Expected failure: missing required_version"
+      runs: |
+        cat > missing_version.tf <<EOF
+        terraform {
+          required_providers {
+            aws = {
+              source  = "hashicorp/aws"
+              version = "~> 4.0"
+            }
+          }
+        }
+        resource "aws_instance" "example" {
+          ami           = "ami-12345678"
+          instance_type = "t2.micro"
+        }
+        EOF
+        if tflint missing_version.tf; then
+          echo "Expected linting to fail but it passed"
+          exit 1
+        fi
+    - name: "Multiple files with expected failures"
+      runs: |
+        mkdir test_dir
+        cat > test_dir/main.tf <<EOF
+        resource "aws_instance" "main" {
+          ami = "ami-12345678"
+        }
+        EOF
+        cat > test_dir/variables.tf <<EOF
+        variable "region" {
+          type = string
+        }
+        EOF
+        if tflint test_dir/; then
+          echo "Expected linting to fail but it passed"
+          exit 1
+        fi
