--- a/karma.yaml
+++ b/karma.yaml
@@ -1,5 +1,4 @@
-# melange.yaml
-package:
+git pupackage:
   name: karma
   version: "0.120"
   description: "A dashboard for managing alerts from Alertmanager"
