fix(build): add a patch to remove github.com/dgrijalva/jwt-go from go mod
The module is not getting used anywhere but it is mentioned in the go.mod file and now it causing error when we try to update the github.com/golang-jwt/jwt/v4

Signed-off-by: debasishbsws <debasishbsws.dev@gmail.com>

--- a/keda-2.15.yaml
+++ b/keda-2.15.yaml
@@ -28,9 +28,13 @@ pipeline:
       repository: https://github.com/kedacore/keda
       tag: v${{package.version}}
 
-  - runs: |
-      go get github.com/golang-jwt/jwt/v4@v4.5.1
-      go mod tidy
+  - uses: patch
+    with:
+      patches: remove-dgrijalva-jwt-go.patch
+
+  - uses: go/bump
+    with:
+      deps: github.com/golang-jwt/jwt/v4@v4.5.1
 
   - runs: |
       ARCH=$(go env GOARCH) make build
