Begin replacing bundled modules

--- a/ruby-3.4.yaml
+++ b/ruby-3.4.yaml
@@ -21,6 +21,8 @@ environment:
       - ca-certificates-bundle
       - expat-dev
       - gdbm-dev
+      - glibc-dev
+      - gmp-dev
       - libffi-dev
       - linux-headers
       - mpdecimal-dev
@@ -31,8 +33,6 @@ environment:
       - readline-dev
       - ruby-3.3
       - rust
-      - sqlite-dev
-      - xz-dev
       - yaml-dev
       - zlib-dev
 
@@ -52,37 +52,19 @@ pipeline:
       tag: v${{vars.underscore-package-version}}_preview2
       expected-commit: 32c733f57bb91e22972319ee63eac9521d954ebc
 
-  - name: Revert commit stopping bundle gem installs
-    runs: |
-      git pull --unshallow
-      git revert 007c75ce4c66243e41144c6977e5ccbf4ab71c93
-
   - name: Generate and Configure
     runs: |
       ./autogen.sh
       ./configure \
-         --host=${{host.triplet.gnu}} \
-         --build=${{host.triplet.gnu}} \
-         --target=${{host.triplet.gnu}} \
          --prefix=${{vars.prefix}} \
-         --enable-ipv6 \
-         --enable-loadable-sqlite-extensions \
-         --enable-optimizations \
          --enable-shared \
-         --without-lto \
-         --with-computed-gotos \
-         --with-dbmliborder=gdbm:ndbm \
-         --with-system-expat \
-         --with-system-ffi \
-         --with-system-libmpdec \
-         --without-ensurepip \
+         --disable-rpath \
+         --sysconfdir=/etc \
          --enable-yjit
 
   - uses: autoconf/make
 
   - uses: autoconf/make-install
-
-  - uses: strip
 
   - runs: |
       # Ignore the patch version of ruby since ruby will install under the
@@ -99,6 +81,8 @@ pipeline:
 
       rm ${{targets.destdir}}/usr/bin/bundle \
          ${{targets.destdir}}/usr/bin/bundler
+
+  - uses: strip
 
 subpackages:
   - name: "ruby-3.4-doc"
@@ -144,11 +128,8 @@ test:
         gem --help
         irb --version
         irb --help
-        racc --version
         rake --version
         rake --help
-        rdbg --version
-        rdbg --help
         rdoc --version
         rdoc --help
         ri --version
