Adding -D_GNU_SOURCE flag
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/curl.yaml
+++ b/curl.yaml
@@ -23,6 +23,7 @@ environment:
       - perl
       - wolfi-base
       - zlib-dev
+      # - libbsd
 
 pipeline:
   - uses: fetch
@@ -50,7 +51,7 @@ pipeline:
 
   - uses: autoconf/make
     with:
-      opts: CPPFLAGS="$CPPFLAGS -DOPENSSL_NO_ENGINE"
+      opts: CPPFLAGS="$CPPFLAGS -DOPENSSL_NO_ENGINE -D_GNU_SOURCE"
 
   - uses: autoconf/make-install
 
