add update section

--- a/gow.yaml
+++ b/gow.yaml
@@ -25,6 +25,12 @@ pipeline:
 
   - uses: strip
 
+update:
+  enabled: false
+  github:
+    identifier: mitranim/gow
+    use-tag: false
+
 test:
   pipeline:
     - runs: |
