adding curl tests

--- a/karma.yaml
+++ b/karma.yaml
@@ -28,6 +28,7 @@ pipeline:
           mkdir -p node_modules/.bin
           touch node_modules/.install
           npm install --package-lock-only
+          npm prune --omit=dev
           npm ci
           cat node_modules/bootstrap/scss/_root.scss | sed s/':root {'/'* {'/ > src/Styles/BootstrapRoot.scss
           npm run build
@@ -44,17 +45,24 @@ pipeline:
       output: ${{package.name}}
 
 test:
+  environment:
+    contents:
+      packages:
+        - curl
   pipeline:
     - name: Run Karma test
       runs: |
         karma --version
-    - name: "Check karma status"
+    - name: "Check karma health"
       uses: test/daemon-check-output
       with:
         start: "${{package.name}}"
         timeout: 60
         expected_output: |
           Starting HTTP server
+        post: |
+          sleep 3
+          curl -s http://localhost:8080/health | grep "Pong" || exit 1
 
 update:
   enabled: true
