Add pkgconf test pipeline to some more packages

--- a/audit.yaml
+++ b/audit.yaml
@@ -96,6 +96,9 @@ subpackages:
         - audit
         - linux-headers
     description: audit dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: audit-doc
     pipeline:
