--- a/libeconf.yaml
+++ b/libeconf.yaml
@@ -39,6 +39,9 @@ subpackages:
       runtime:
         - libeconf
     description: libeconf dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
