--- a/libvterm.yaml
+++ b/libvterm.yaml
@@ -32,6 +32,9 @@ subpackages:
     pipeline:
       - uses: split/dev
     description: ${{package.name}} dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ${{package.name}}-static
     pipeline:
