--- a/rtmpdump.yaml
+++ b/rtmpdump.yaml
@@ -46,6 +46,9 @@ subpackages:
         - gnutls-dev
         - nettle-dev
         - zlib-dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ${{package.name}}-doc
     description: ${{package.name}} documentation
