--- a/libreoffice-24.8.yaml
+++ b/libreoffice-24.8.yaml
@@ -1,7 +1,7 @@
 package:
   name: libreoffice-24.8
   version: 24.8.3.1
-  epoch: 0
+  epoch: 1
   description:
   # https://www.libreoffice.org/about-us/licenses
   copyright:
@@ -77,7 +77,7 @@ environment:
       - mesa
       - mesa-dev
       - mesa-egl
-      - mesa-gl
+      - mesa-glx
       - nasm
       - openjdk-${{vars.java-version}}
       - openjdk-${{vars.java-version}}-default-jvm
