--- a/qt5-qtbase.yaml
+++ b/qt5-qtbase.yaml
@@ -2,7 +2,7 @@
 package:
   name: qt5-qtbase
   version: 5.15.15
-  epoch: 3
+  epoch: 4
   description: Qt5 - QtBase components
   copyright:
     - license: LGPL-3.0-only OR GPL-3.0-only WITH Qt-GPL-exception-1.0
@@ -48,8 +48,7 @@ environment:
       - mesa
       - mesa-dev
       - mesa-egl
-      - mesa-gl
-      - mesa-gles
+      - mesa-glx
       - mtdev-dev
       - openssf-compiler-options
       - openssh-client
