--- a/xorg-server.yaml
+++ b/xorg-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: xorg-server
   version: 21.1.14
-  epoch: 2
+  epoch: 3
   description: "X Server"
   copyright:
     - license: SGI-B-2.0
@@ -40,7 +40,7 @@ environment:
       - libxxf86vm-dev
       - mesa-dev
       - mesa-gbm
-      - mesa-gl
+      - mesa-glx
       - mesa-libgallium
       - openssf-compiler-options
       - openssl-dev
