fix: add libglvnd where needed

--- a/gst-plugins-bad.yaml
+++ b/gst-plugins-bad.yaml
@@ -26,6 +26,7 @@ environment:
       - gstreamer-dev
       - gtk-3-dev
       - libdrm-dev
+      - libglvnd-dev
       - libice-dev
       - libogg-dev
       - libsm-dev
