--- a/libreoffice-24.8.yaml
+++ b/libreoffice-24.8.yaml
@@ -56,6 +56,7 @@ environment:
       - libatk-1.0
       - libatk-bridge-2.0
       - libcmis-dev
+      - libglvnd-dev
       - libice-dev
       - liblangtag-dev
       - libnspr-dev
