--- a/qt5-qtbase.yaml
+++ b/qt5-qtbase.yaml
@@ -30,6 +30,7 @@ environment:
       - gtk-3-dev
       - hicolor-icon-theme
       - icu-dev
+      - libglvnd-dev
       - libice-dev
       - libinput-dev
       - libjpeg-turbo-dev
