--- a/qt6-qtbase.yaml
+++ b/qt6-qtbase.yaml
@@ -30,6 +30,7 @@ environment:
       - glib-dev
       - gperf
       - libdrm-dev
+      - libglvnd-dev
       - libnspr-dev
       - libnss-dev
       - libx11-dev
