--- a/xorg-server.yaml
+++ b/xorg-server.yaml
@@ -10,6 +10,7 @@ package:
       - dbus
       - dbus-x11
       - font-misc
+      - libglvnd
       - mesa-libgallium
       - systemd
       - ttf-dejavu
@@ -29,6 +30,7 @@ environment:
       - libdrm-dev
       - libepoxy-dev
       - libfontenc-dev
+      - libglvnd-dev
       - libpciaccess-dev
       - libx11-dev
       - libxcvt-dev
