--- a/firefox.yaml
+++ b/firefox.yaml
@@ -10,6 +10,8 @@ package:
     no-provides: true
   dependencies:
     runtime:
+      - libglvnd
+      - mesa
       - mesa-glx
       - pciutils-libs
 
