--- a/glew.yaml
+++ b/glew.yaml
@@ -13,6 +13,7 @@ environment:
       - cmake
       - glu
       - libLLVM-16
+      - libglvnd-dev
       - libx11-dev
       - libxi-dev
       - libxmu-dev
