--- a/gst-plugins-base.yaml
+++ b/gst-plugins-base.yaml
@@ -25,6 +25,7 @@ environment:
       - gstreamer-dev
       - gtk-3-dev
       - libdrm-dev
+      - libglvnd-dev
       - libice-dev
       - libogg-dev
       - libsm-dev
