refactor: add libglvnd as dependency for mesa

--- a/mesa.yaml
+++ b/mesa.yaml
@@ -5,6 +5,9 @@ package:
   description: Mesa DRI OpenGL library
   copyright:
     - license: MIT AND SGI-B-2.0 AND BSL-1.0
+  dependencies:
+    runtime:
+      - libglvnd
 
 vars:
   llvm-ver: 19
@@ -128,6 +131,9 @@ subpackages:
   - range: libs
     name: mesa-${{range.key}}
     description: mesa ${{range.key}}
+    dependencies:
+      runtime:
+        - libglvnd
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib
@@ -136,6 +142,9 @@ subpackages:
   - name: mesa-dev
     pipeline:
       - uses: split/dev
+    dependencies:
+      runtime:
+        - libglvnd-dev
     description: mesa dev
     test:
       pipeline:
