--- a/mesa.yaml
+++ b/mesa.yaml
@@ -5,6 +5,9 @@ package:
   description: Mesa DRI OpenGL library
   copyright:
     - license: MIT AND SGI-B-2.0 AND BSL-1.0
+  dependencies:
+    runtime:
+      - libglvnd
 
 vars:
   llvm-ver: 19
@@ -25,6 +28,7 @@ environment:
       - gettext
       - glslang-dev
       - libdrm-dev
+      - libglvnd-dev
       - libtool
       - libva
       - libva-dev
@@ -84,6 +88,7 @@ pipeline:
         -Dvulkan-layers=$_vulkan_layers \
         -Dplatforms=x11,wayland \
         -Dllvm=enabled \
+        -Dglvnd=true \
         -Dshared-llvm=enabled \
         -Dshared-glapi=enabled \
         -Dgbm=enabled \
@@ -113,9 +118,8 @@ pipeline:
 data:
   - name: libs
     items:
-      gles: libGLES*
-      egl: libEGL
-      gl: libGL
+      egl: libEGL_mesa
+      glx: libGLX_mesa
       glapi: libglapi
       xatracker: libxatracker*
       osmesa: libOSMesa
@@ -123,18 +127,37 @@ data:
       libd3dadapter9: d3d/d3dadapter9
       libgallium: libgallium-${{package.version}}
 
+  - name: transitive
+    items:
+      gl: ""
+      gles: ""
+
 subpackages:
   - range: libs
     name: mesa-${{range.key}}
     description: mesa ${{range.key}}
+    dependencies:
+      runtime:
+        - libglvnd
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib
           mv ${{targets.destdir}}/usr/lib/${{range.value}}.so* ${{targets.subpkgdir}}/usr/lib
 
+  - range: transitive
+    name: mesa-${{range.key}}
+    description: mesa transitive package for ${{range.key}}
+    dependencies:
+      runtime:
+        - mesa
+        - mesa-glx
+
   - name: mesa-dev
     pipeline:
       - uses: split/dev
+    dependencies:
+      runtime:
+        - libglvnd-dev
     description: mesa dev
     test:
       pipeline:
@@ -145,12 +168,12 @@ test:
     contents:
       packages:
         - gcc
+        - libglvnd-dev
         - libx11-dev
         - libxext-dev
-        - mesa-dev
+        - mesa
         - wget
         - glibc-dev
-        - mesa-gl
   pipeline:
     - name: Compile and run glxgears
       runs: |
