--- a/promitor.yaml
+++ b/promitor.yaml
@@ -24,6 +24,10 @@ pipeline:
       tag: Scraper-v${{package.version}}
       expected-commit: a457a98b6e2920ea2751f4d07d0d8e085946eeec
 
+  - uses: patch
+    with:
+      patches: mitigate-CVE-2024-35255.patch
+
   - working-directory: src
     pipeline:
       - name: "Build Promitor Scraper"
