--- a/xorg-server.yaml
+++ b/xorg-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: xorg-server
   version: 21.1.14
-  epoch: 3
+  epoch: 2
   description: "X Server"
   copyright:
     - license: SGI-B-2.0
@@ -10,7 +10,6 @@ package:
       - dbus
       - dbus-x11
       - font-misc
-      - libglvnd
       - mesa-libgallium
       - systemd
       - ttf-dejavu
@@ -41,7 +40,7 @@ environment:
       - libxxf86vm-dev
       - mesa-dev
       - mesa-gbm
-      - mesa-glx
+      - mesa-gl
       - mesa-libgallium
       - openssf-compiler-options
       - openssl-dev
