--- a/etcd-3.5.yaml
+++ b/etcd-3.5.yaml
@@ -28,6 +28,19 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: f20bbadd404b57c776d1e8876cefd1ac29b03fb5
 
+  # This order is important and changing it can lead to build failures due to tidying interdependencies
+  - uses: go/bump
+    with:
+      deps: github.com/golang-jwt/jwt/v4@v4.5.1
+      modroot: etcdctl
+  - uses: go/bump
+    with:
+      deps: github.com/golang-jwt/jwt/v4@v4.5.1
+      modroot: etcdutl
+  - uses: go/bump
+    with:
+      deps: github.com/golang-jwt/jwt/v4@v4.5.1
+      modroot: server
   - uses: go/bump
     with:
       deps: github.com/golang-jwt/jwt/v4@v4.5.1
