--- a/libmamba.yaml
+++ b/libmamba.yaml
@@ -25,8 +25,10 @@ environment:
       - nlohmann-json
       - openssf-compiler-options
       - openssl-dev
+      - py3-distro
       - py3-pip
       - py3-pybind11-dev
+      - py3-scikit-build
       - py3-wheel
       - python3-dev
       - reproc
@@ -38,6 +40,8 @@ environment:
       - yaml-cpp-dev
       - zstd-dev
       - zstd-static
+  environment:
+    CXXFLAGS: "-fPIC"
 
 pipeline:
   - uses: git-checkout
@@ -45,6 +49,10 @@ pipeline:
       expected-commit: 9fc7b99ea32daaf3019416e0a42141b23923fd82
       repository: https://github.com/mamba-org/mamba
       tag: ${{package.version}}
+
+  - uses: patch
+    with:
+      patches: support-shared-libs.patch
 
   - uses: cmake/configure
     with:
@@ -69,10 +77,9 @@ subpackages:
         - libmamba
     pipeline:
       - runs: |
-          python -m pip install --root=${{targets.subpkgdir}} --no-deps --no-build-isolation --ignore-installed ./libmambapy/
-          PYVER=$(python --version | awk '{print $2}' | awk -F. '{print $1"."$2}')
-          mkdir -p "${{targets.subpkgdir}}"/usr/lib/python${PYVER}/site-packages/libmambapy
-          mv ${{targets.destdir}}/home/build/libmambapy/libmambapy/bindings.*.so "${{targets.subpkgdir}}"/usr/lib/python${PYVER}/site-packages/libmambapy/
+          CMAKE_PREFIX_PATH=${{targets.subpkgdir}}/usr \
+            libmamba_DIR=${{targets.destdir}}/usr/lib/cmake/libmamba \
+            python -m pip install --root=${{targets.subpkgdir}} --no-deps --no-build-isolation --ignore-installed ./libmambapy/
 
   - name: libmamba-dev
     pipeline:
