--- a/grpc-1.67.yaml
+++ b/grpc-1.67.yaml
@@ -74,6 +74,7 @@ pipeline:
       git submodule update --init --recursive
 
   - runs: |
+      export CXXFLAGS="-Wno-error=attributes -Wno-error=return-type"
       mkdir -p "${{targets.destdir}}"/usr/share/doc/grpc
       cmake -B _build -G Ninja \
       	-DCMAKE_BUILD_TYPE=None \
