fix: correct license

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -4,7 +4,7 @@ package:
   epoch: 0
   description: Vector and raster maps with GL styles. Server side rendering by MapLibre GL Native. Map tile server for MapLibre GL JS, Android, iOS, Leaflet, OpenLayers, GIS via WMTS, etc.
   copyright:
-    - license: BSD-2
+    - license: BSD-2-Clause
   dependencies:
     runtime:
       - Xvfb
