fix: update express to resolve CVEs

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -54,6 +54,10 @@ pipeline:
       expected-commit: 6cda7a0b384940b781838be7415b2ae448edcd29
       destination: app
 
+  - uses: patch
+    with:
+      patches: package-json.patch
+
   - runs: |
       cd app/
       npm install --omit=dev
@@ -71,6 +75,15 @@ pipeline:
       npm install --install-from-source "sharp@${sharp_version}"
       rm -fR node_modules/@img/*musl*
 
+  # check maplibre-gl-native package matches expected version
+  - runs: |
+      cd app/
+      version="$(jq <package-lock.json ".packages[\"node_modules/@maplibre/maplibre-gl-native\"].version" -r)"
+      if [ "$version" != "6.0.0" ] ; then
+        echo "Application version of maplibre-gl-native incorrect: $version"
+        exit 1
+      fi
+
   # build maplibre-native node 20.x module
   - uses: git-checkout
     with:
@@ -80,6 +93,7 @@ pipeline:
       destination: maplibre-native
       recurse-submodules: true
 
+  # compile and replace mbgl.node binary as node-gyp can't be used for compilation
   - runs: |
       cd maplibre-native/
       cmake . -DMLN_WITH_NODE=ON && make -C platform/node -j$(nproc) mbgl-node.abi-115
