chore: add comments ; remove test code for browserify/resolve

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -54,13 +54,15 @@ pipeline:
       expected-commit: 6cda7a0b384940b781838be7415b2ae448edcd29
       destination: app
 
+  # patch and install npm dependencies
   - uses: patch
     with:
       patches: package-json.patch
 
+  # remove test code for resolve module that is triggering a false positive CVE scan
+  # see https://github.com/browserify/resolve/issues/319 for more details
   - runs: |
-      cd app/
-      npm install --omit=dev
+      rm -fR node_modules/resolve/test
 
   # build canvas from source code to use system libraries
   - runs: |
