fix: re-add code

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -62,6 +62,8 @@ pipeline:
   # remove test code for resolve module that is triggering a false positive CVE scan
   # see https://github.com/browserify/resolve/issues/319 for more details
   - runs: |
+      cd app/
+      npm install --omit=dev
       rm -fR node_modules/resolve/test
 
   # build canvas from source code to use system libraries
