make go toolchain happy and rebase
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/istio-envoy-1.23.yaml
+++ b/istio-envoy-1.23.yaml
@@ -50,6 +50,9 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: cbd889517ed13455bf2d88facc5685d958eb54a6
 
+  - name: make go toolchain happy
+    runs: sed -i 's/go 1\.22\.0/go 1.22/' go.mod
+
   - runs: |
       export JAVA_HOME=/usr/lib/jvm/java-11-openjdk
       mkdir -p .cache/bazel/_bazel_root
