feat: add clean up of build files

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -73,7 +73,11 @@ pipeline:
   # build canvas from source code to use system libraries
   - runs: |
       cd app/node_modules/canvas
+      du -xs .
       ../.bin/node-pre-gyp install --build-from-source
+      # Clean up intermediate build files
+      find . -name "*.o" -type f -delete
+      find . -path "*/obj.target/*" -type f -delete
 
   # reinstall sharp and remove any musl packages
   - runs: |
