--- a/.github/chainguard/ci-so-check.sts.yaml
+++ b/.github/chainguard/ci-so-check.sts.yaml
@@ -1,8 +1,8 @@
 issuer: https://accounts.google.com
 
 # staging-enforce: ci-so-check-stvn49i5f66mni64gt@staging-enforce-cd1e.iam.gserviceaccount.com (103377873370411205770)
-# prod-enforce: ci-so-check-fkg6@prod-enforce-fabc.iam.gserviceaccount.com (108177787424674218377)
-subject_pattern: "(103377873370411205770|108177787424674218377)"
+# prod-enforce: ci-so-check-pitbc0wzwgefx2btsy@prod-enforce-fabc.iam.gserviceaccount.com (114009508504016091101)
+subject_pattern: "(103377873370411205770|114009508504016091101)"
 
 permissions:
   checks: write
