fix: disable go mod tidy to resolve dependency issue
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/coredns.yaml
+++ b/coredns.yaml
@@ -26,6 +26,7 @@ pipeline:
   - uses: go/bump
     with:
       deps: github.com/golang-jwt/jwt/v4@v4.5.1
+      tidy: false
 
   - uses: go/build
     with:
