--- a/gitlab-cng-17.5.yaml
+++ b/gitlab-cng-17.5.yaml
@@ -66,10 +66,6 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 3a52582dee843c44dac00ba9410cfdaedb63fe4d
 
-  - uses: go/bump
-    with:
-      deps: github.com/golang-jwt/jwt/v4@v4.5.1
-
 data:
   # Used to create all of the *-scripts subpackages from the CNG repo.
   - name: scripts
@@ -200,6 +196,10 @@ subpackages:
       - working-directory: ./container-registry
         runs: |
           mkdir -p "${{targets.contextdir}}"/etc/docker/registry
+      - uses: go/bump
+        with:
+          deps: github.com/golang-jwt/jwt/v4@v4.5.1
+          modroot: ./container-registry
       - uses: go/build
         with:
           packages: ./cmd/registry
