--- a/malcontent.yaml
+++ b/malcontent.yaml
@@ -61,8 +61,7 @@ test:
     - name: Verify malcontent diff
       runs: |
         set -o pipefail
-        mal diff /usr/bin/openssl /usr/bin/crane | grep "[+]MED.*archives/zip"
-
+        mal diff /usr/bin/openssl /usr/bin/crane | grep "archives/zip"
 update:
   enabled: true
   github:
