py3-bokeh: Define and use ${{vars.import}}
Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/py3-bokeh.yaml
+++ b/py3-bokeh.yaml
@@ -11,6 +11,7 @@ package:
 
 vars:
   pypi-package: bokeh
+  import: bokeh
 
 data:
   - name: py-versions
@@ -68,7 +69,7 @@ subpackages:
         - uses: python/import
           with:
             python: python${{range.key}}
-            import: ${{vars.pypi-package}}
+            import: ${{vars.import}}
 
   - range: py-versions
     name: py${{range.key}}-${{vars.pypi-package}}-bin
@@ -100,7 +101,7 @@ subpackages:
         - uses: python/import
           with:
             python: python3.10
-            import: ${{vars.pypi-package}}
+            import: ${{vars.import}}
 
 update:
   enabled: true
