fixed CVE. Can't bump spring-securty, causes compatability issues.
Signed-off-by: kz3640 <kz3640@g.rit.edu>

--- a/thingsboard/pombump-deps.yaml
+++ b/thingsboard/pombump-deps.yaml
@@ -20,3 +20,6 @@ patches:
   - groupId: org.springframework
     artifactId: spring-web
     version: 6.1.12
+  - groupId: org.springframework
+    artifactId: spring-context
+    version: 6.1.14
