openscap: move oscap-docker to subpkg
Signed-off-by: Tuan Anh Tran <me@tuananh.org>

--- a/openscap.yaml
+++ b/openscap.yaml
@@ -81,6 +81,16 @@ subpackages:
         - openscap
         - py3-docker
         - docker-cli
+        - python3
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.contextdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/oscap-docker "${{targets.contextdir}}"/usr/bin
+    test:
+      pipeline:
+        - runs: |
+            oscap-docker --help
+        - uses: test/pkgconf
 
 # TODO: Requires some additional graphviz/xml packages
 # - name: ${{package.name}}-doc
