google-authenticator: use openssf-compiler-options
Signed-off-by: Tuan Anh Tran <me@tuananh.org>

--- a/google-authenticator.yaml
+++ b/google-authenticator.yaml
@@ -15,6 +15,7 @@ environment:
       - libtool
       - linux-pam-dev
       - m4
+      - openssf-compiler-options
       - openssl-dev
 
 pipeline:
