chore(rust-bindgen): Bump rustix
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/rust-bindgen.yaml
+++ b/rust-bindgen.yaml
@@ -14,6 +14,9 @@ pipeline:
       repository: https://github.com/rust-lang/rust-bindgen
       tag: v${{package.version}}
 
+  - name: Bump bindgen deps
+    runs: cargo update --package rustix --precise 0.37.25
+
   - name: Build bindgen
     uses: cargo/build
     with:
