--- a/ruby3.2-benchmark.yaml
+++ b/ruby3.2-benchmark.yaml
@@ -2,7 +2,7 @@ package:
   name: ruby3.2-benchmark
   version: 0.4.0
   epoch: 0
-  description: "A performance benchmarking library for Ruby"
+  description: "A performance benchmarking library for Ruby."
   copyright:
     - license: BSD-2-Clause OR Ruby
 
