Add melange test coverage
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/mycli.yaml
+++ b/mycli.yaml
@@ -46,6 +46,80 @@ pipeline:
 
   - uses: strip
 
+test:
+  environment:
+    contents:
+      packages:
+        - py3-click
+        - py3-pymysql
+        - py3-pyperclip
+        - py3-sqlparse
+  pipeline:
+    - uses: python/import
+      with:
+        imports: |
+          from mycli import __version__
+    - uses: py/one-python
+      with:
+        content: |
+          python3 <<-EOF
+          from mycli import __version__
+          from unittest.mock import Mock, patch, PropertyMock
+          import pymysql
+
+          assert __version__ == "1.28.0", f"Expected version 1.28.0, got {__version__}"
+          print(f"Version check passed: {__version__}")
+
+          # Test core mycli functionality
+          from mycli.packages.special import iocommands
+          assert hasattr(iocommands, 'write_tee')
+          print("Core functionality test passed")
+
+          # Test connection and query functionality
+          from mycli.sqlexecute import SQLExecute
+          with patch('pymysql.connect') as mock_connect:
+              mock_conn = Mock()
+              mock_cursor = Mock()
+
+              # Setup the mock connection with proper version string
+              type(mock_conn).server_version = PropertyMock(return_value='5.7.0-MySQL')
+              mock_conn.get_server_info.return_value = '5.7.0-MySQL'
+              mock_connect.return_value = mock_conn
+              mock_conn.cursor.return_value = mock_cursor
+
+              # Setup mock responses
+              mock_cursor.fetchall.return_value = [("mycli",)]
+              mock_cursor.description = [("Database",)]
+
+              sql = SQLExecute(
+                  host='localhost',
+                  user='test',
+                  password='test',
+                  port=3306,
+                  database='test',
+                  socket=None,
+                  charset='utf8mb4',
+                  local_infile=False,
+                  ssl=None,
+                  ssh_user=None,
+                  ssh_host=None,
+                  ssh_port=None,
+                  ssh_password=None,
+                  ssh_key_filename=None,
+              )
+
+              # Test connection
+              sql.connect()
+              print("Connection test passed")
+
+              # Test a basic query
+              result = sql.run("SHOW DATABASES")
+              assert result is not None
+              print("Query test passed")
+
+          print("All tests passed")
+          EOF
+
 update:
   enabled: true
   release-monitor:
