remove items from build which where removed upstream in commit: https://github.com/NVIDIA/nvidia-container-toolkit/pull/722/files. These components were added as runtime packages instead.
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/nvidia-container-toolkit.yaml
+++ b/nvidia-container-toolkit.yaml
@@ -36,9 +36,6 @@ data:
 
   - name: tools
     items:
-      containerd: containerd
-      crio: crio
-      docker: docker
       nvidia-toolkit: nvidia-toolkit
       operator: operator
       toolkit: toolkit
@@ -57,6 +54,11 @@ subpackages:
     test:
       pipeline:
         - runs: |
+            # Skips test if local host does not have nvidia libs.
+            if ! ldconfig -p | grep -q libnvidia-ml.so; then
+              echo "libnvidia-ml.so not found, skipping test."
+              exit 0
+            fi
             apk add runc # runc is just a placeholder, the actual runtime binary is TBD by the user
             ${{range.value}} --help
 
@@ -83,6 +85,13 @@ subpackages:
               /work/${{range.key}} 2>&1 | grep -q "Permission denied"
               exit $?
             fi
+
+            # Skips test if local host does not have nvidia libs.
+            if ! ldconfig -p | grep -q libnvidia-ml.so; then
+              echo "libnvidia-ml.so not found, skipping test for ${{range.key}}."
+              exit 0
+            fi
+
             /work/${{range.key}} --version
 
 update:
