--- a/ingress-nginx-controller-1.11.yaml
+++ b/ingress-nginx-controller-1.11.yaml
@@ -541,6 +541,7 @@ subpackages:
       provides:
         - ingress-nginx-opentelemetry=${{vars.nginx-ingress-major-minor}}
       runtime:
+        - opentelemetry-plugin-nginx
         - opentelemetry-plugin-nginx-compat
     pipeline:
       - uses: go/build
@@ -550,6 +551,10 @@ subpackages:
           packages: init_module.go
           modroot: images/opentelemetry/rootfs
     test:
+      environment:
+        contents:
+          packages:
+            - opentelemetry-plugin-nginx
       pipeline:
         - runs: |
             mkdir -p /modules_mount/etc/nginx/modules/otel
