use git mirror, as release-monitor was providing bad version numbers
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/libgpg-error.yaml
+++ b/libgpg-error.yaml
@@ -1,6 +1,6 @@
 package:
   name: libgpg-error
-  version: "1.51"
+  version: "1.50"
   epoch: 0
   description: Support library for libgcrypt
   copyright:
@@ -21,7 +21,7 @@ environment:
 pipeline:
   - uses: git-checkout
     with:
-      repository: git://git.gnupg.org/libgpg-error.git
+      repository: https://github.com/gpg/libgpg-error.git
       tag: libgpg-error-${{package.version}}
       expected-commit: bb732615daad9bba9026354ae90f0f5292ea4908
 
@@ -64,8 +64,10 @@ subpackages:
 
 update:
   enabled: true
-  release-monitor:
-    identifier: 1628
+  github:
+    identifier: gpg/libgpg-error
+    strip-prefix: libgpg-error-
+    tag-filter: libgpg-error-
 
 test:
   pipeline:
