instruct the update block to poll for tags for updates, there are no releases in this upstream git project
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/libgpg-error.yaml
+++ b/libgpg-error.yaml
@@ -65,6 +65,7 @@ subpackages:
 update:
   enabled: true
   github:
+    use-tag: true
     identifier: gpg/libgpg-error
     strip-prefix: libgpg-error-
     tag-filter: libgpg-error-
