Adding some changes to get spark working with scala 2.13

--- a/test-spark.yaml
+++ b/test-spark.yaml
@@ -25,7 +25,8 @@ environment:
       - libavcodec61
   environment:
     LANG: en_US.UTF-8
-    JAVA_HOME: /usr/lib/jvm/java-17-openjdk/
+    JAVA_HOME: /usr/lib/jvm/java-17-openjdk
+    PATH: $PATH:$JAVA_HOME/bin
 
 pipeline:
   - uses: git-checkout
@@ -36,12 +37,14 @@ pipeline:
 
   - runs: |
       mvn clean
-      export MAVEN_OPTS="-Xss64m -Xmx2g -XX:ReservedCodeCacheSize=1g"
       ./dev/change-scala-version.sh 2.13
       ./build/mvn -DskipTests -Pscala-2.13 clean package
       mkdir -p ${{targets.contextdir}}/usr/lib/spark
       mkdir -p ${{targets.contextdir}}/usr/lib/spark/work-dir
-      mv bin/ sbin/ ${{targets.contextdir}}/usr/lib/spark
+      mv bin/ ${{targets.contextdir}}/usr/lib/spark
+      mv sbin/ ${{targets.contextdir}}/usr/lib/spark
+      mv target ${{targets.contextdir}}/usr/lib/spark
+      mv assembly ${{targets.contextdir}}/usr/lib/spark
 
 test:
   environment:
@@ -59,13 +62,13 @@ test:
         - name: Test if the Scala versions are correct
           runs: ls /usr/lib/spark/jars/scala-* | grep -q $SCALA_VERSION
         - name: Check spark-shell --version
-        - runs: /usr/lib/spark/bin/spark-shell --version
+          runs: /usr/lib/spark/bin/spark-shell --version
         - name: Check spark-submit --version
-        - runs: /usr/lib/spark/bin/spark-submit --version
+          runs: /usr/lib/spark/bin/spark-submit --version
         - name: Check pyspark --version
-        - runs: /usr/lib/spark/bin/pyspark --version
+          runs: /usr/lib/spark/bin/pyspark --version
         - name: Check spark-sql --version
-        - runs: /usr/lib/spark/bin/ spark-sql --version
+          runs: /usr/lib/spark/bin/ spark-sql --version
         - name: Test entrypoint
           runs: timeout 10 /opt/entrypoint.sh /opt/spark/bin/spark-shell > spark_log.txt 2>&1 || [ $? -eq 143 ] && grep "Spark session available" spark_log.txt && exit_code=0 || exit_code=$? && echo $exit_code
         - name: Run a simple Scala test script
