Add melange test coverage
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/ruby3.2-msgpack.yaml
+++ b/ruby3.2-msgpack.yaml
@@ -51,6 +51,67 @@ update:
     use-tag: true
     tag-filter: v
 
+test:
+  environment:
+    contents:
+      packages:
+        - ruby-${{vars.rubyMM}}
+  pipeline:
+    - runs: |
+        ruby <<-EOF
+        require 'msgpack'
+        require 'test/unit'
+        include Test::Unit::Assertions
+
+        # Test basic integer packing/unpacking
+        packed = 42.to_msgpack
+        assert_equal 42, MessagePack.unpack(packed)
+        puts "Integer serialization test passed"
+
+        # Test string packing/unpacking
+        packed = "hello".to_msgpack
+        assert_equal "hello", MessagePack.unpack(packed)
+        puts "String serialization test passed"
+
+        # Test array packing/unpacking
+        data = [1, "abc", true]
+        packed = data.to_msgpack
+        assert_equal data, MessagePack.unpack(packed)
+        puts "Array serialization test passed"
+
+        # Test hash packing/unpacking
+        data = {"name" => "test", "value" => 123}
+        packed = data.to_msgpack
+        assert_equal data, MessagePack.unpack(packed)
+        puts "Hash serialization test passed"
+
+        # Test nested structure
+        nested = {
+          "array" => [1, 2, 3],
+          "hash" => {"a" => 1, "b" => 2},
+          "mixed" => [{"x" => 1}, [1, 2], "test"]
+        }
+        packed = nested.to_msgpack
+        assert_equal nested, MessagePack.unpack(packed)
+        puts "Nested structure serialization test passed"
+
+        # Test packer/unpacker streaming API
+        packer = MessagePack::Packer.new
+        packer.write(1)
+        packer.write("string")
+        packer.write([1,2,3])
+        data = packer.to_s
+
+        unpacker = MessagePack::Unpacker.new
+        unpacker.feed(data)
+        results = []
+        unpacker.each {|obj| results << obj }
+        assert_equal [1, "string", [1,2,3]], results
+        puts "Streaming API test passed"
+
+        puts "All tests passed!"
+        EOF
+
 var-transforms:
   - from: ${{package.name}}
     match: ^ruby(\d\.\d+)-.*
