--- a/ruby3.2-async-pool.yaml
+++ b/ruby3.2-async-pool.yaml
@@ -53,9 +53,36 @@ update:
     use-tag: true
 
 test:
+  environment:
+    contents:
+      packages:
+        - ruby-${{vars.rubyMM}}
+        - ruby${{vars.rubyMM}}-async
   pipeline:
     - runs: |
-        ruby -e "require 'async/pool'"
+        ruby <<-EOF
+        require 'async'
+        require 'async/pool'
+        require 'test/unit'
+        include Test::Unit::Assertions
+
+        class TestAsyncPool < Test::Unit::TestCase
+          def test_pool_limit
+            Async do
+              pool = Async::Pool::Controller.new(limit: 2)
+              tasks = []
+
+              3.times do
+                tasks << pool.async { sleep(0.1) } # Simulate task work
+              end
+
+              # Ensure only 2 tasks run concurrently
+              assert tasks.count { |task| task.running? } <= 2, "Expected limit of 2 concurrent tasks"
+              puts "Pool limit test passed."
+            end
+          end
+        end
+        EOF
 
 var-transforms:
   - from: ${{package.name}}
