Run mvn spotless:apply after mavenbump
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -51,6 +51,7 @@ pipeline:
       patches: ignoreArchiveNotReadableTest.patch
 
   - uses: maven/pombump
+  - runs: mvn spotless:apply
 
   - runs: |
       # Use commit timestamp as build date to satisfy Jenkins in-place upgrade functionality (.war file needs to match release date)
