Drop busybox as buildtime dep, for bash and coreutils, as the busybox grep command doesn't support certain options, used by this build. Also flip a test to use --help instead of --version
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/gdal.yaml
+++ b/gdal.yaml
@@ -25,14 +25,15 @@ environment:
       - arpack-dev
       - autoconf
       - automake
+      - bash
       - basisu-dev
       - bison
       - blosc-dev
       - brunsli-dev
       - build-base
-      - busybox
       - ca-certificates-bundle
       - cmake
+      - coreutils
       - curl-dev
       - expat-dev
       - geos-dev
@@ -204,7 +205,7 @@ subpackages:
             ogr2ogr --help
             ogrinfo --version
             ogrinfo --help
-            ogrlineref --version
+            ogrlineref --help
             ogrtindex --help
             setdevenv.sh --version
             setdevenv.sh --help
