Updated the cve patch file and devide it into diffrent part
Signed-off-by: debasishbsws <debasishbsws.dev@gmail.com>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -269,11 +269,11 @@ subpackages:
           - uses: git-checkout
             with:
               repository: https://github.com/DataDog/integrations-core
-              branch: ${{vars.datadog-major-minor-x}} # 7.58.x
+              branch: ${{vars.datadog-major-minor-x}} # 7.59.x
               expected-commit: cff91adb18fe879fd875d62d285a67deb69040fe # needs to be updated with each new release
           - uses: patch
             with:
-              patches: /home/build/cve-fixes.patch
+              patches: /home/build/int-core-datadog_checks_dev-pyproject-toml.patch /home/build/int-core-mysql-hatch-toml.patch /home/build/int-core-singlestore-hatch-toml.patch /home/build/int-core-agent_requirements-in.patch /home/build/int-core-snowflake-pyproject-toml.patch
           - runs: |
               # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
               SOURCE_DATE_EPOCH=315532800
