refactor(libreoffice-24.8): update to mesa with glvnd

--- a/libreoffice-24.8.yaml
+++ b/libreoffice-24.8.yaml
@@ -76,8 +76,7 @@ environment:
       - m4
       - mesa
       - mesa-dev
-      - mesa-egl
-      - mesa-gl
+      - mesa-glx
       - nasm
       - openjdk-${{vars.java-version}}
       - openjdk-${{vars.java-version}}-default-jvm
