refactor: use working-directory for pipelines

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -60,36 +60,35 @@ pipeline:
       patches: package-json.patch
 
   # install packages
-  - runs: |
-      cd app/
+  - working-directory: app
+    runs: |
       npm install --omit=dev
 
   # remove test code for resolve module that is triggering a false positive CVE scan
   # see https://github.com/browserify/resolve/issues/319 for more details
-  - runs: |
-      cd app/
+  - working-directory: app
+    runs: |
       rm -fR node_modules/resolve/test
 
   # build canvas from source code to use system libraries
-  - runs: |
-      cd app/node_modules/canvas
-      du -xs .
+  - working-directory: app/node_modules/canvas
+    runs: |
       ../.bin/node-pre-gyp install --build-from-source
       # Clean up intermediate build files
       find . -name "*.o" -type f -delete
       find . -path "*/obj.target/*" -type f -delete
 
   # reinstall sharp and remove any musl packages
-  - runs: |
-      cd app/
+  - working-directory: app
+    runs: |
       rm -fR node_modules/@img/*musl* node_modules/sharp
       sharp_version="$(jq <package-lock.json -r ".packages[\"node_modules/sharp\"].version")"
       npm install --install-from-source "sharp@${sharp_version}"
       rm -fR node_modules/@img/*musl*
 
   # check maplibre-gl-native package matches expected version
-  - runs: |
-      cd app/
+  - working-directory: app
+    runs: |
       version="$(jq <package-lock.json ".packages[\"node_modules/@maplibre/maplibre-gl-native\"].version" -r)"
       if [ "$version" != "6.0.0" ] ; then
         echo "Application version of maplibre-gl-native incorrect: $version"
@@ -106,14 +105,14 @@ pipeline:
       recurse-submodules: true
 
   # compile and replace mbgl.node binary as node-gyp can't be used for compilation
-  - runs: |
-      cd maplibre-native/
+  - working-directory: maplibre-native
+    runs: |
       cmake . -DMLN_WITH_NODE=ON && make -C platform/node -j$(nproc) mbgl-node.abi-115
       cp platform/node/lib/node-v115/mbgl.node ../app/node_modules/@maplibre/maplibre-gl-native/lib/node-v115/mbgl.node
 
   # move required components of app to /usr/src/app
-  - runs: |
-      cd app/
+  - working-directory: app
+    runs: |
       mkdir -p ${{targets.destdir}}/usr/src/app
       mv node_modules package.json package-lock.json public src ${{targets.destdir}}/usr/src/app/
 
