fix(build): Use gclient sync -D which will delete any stale directories
it appears there are duplicate package dependencies in the Dart SDK source tree after checking out This is likely due to packages being present in both third_party/pkg/core/pkgs/ and third_party/pkg/ directories.

Signed-off-by: debasishbsws <debasishbsws.dev@gmail.com>

--- a/dart.yaml
+++ b/dart.yaml
@@ -36,7 +36,7 @@ pipeline:
       cd sdk
       git fetch --tags --all
       git checkout tags/${{package.version}} -b ${{package.version}}
-      gclient sync
+      gclient sync -D
 
   - if: ${{build.arch}} == "x86_64"
     working-directory: /home/dart-sdk/sdk
