--- a/apk-tools.yaml
+++ b/apk-tools.yaml
@@ -1,7 +1,7 @@
 package:
   name: apk-tools
   version: 2.14.4
-  epoch: 1
+  epoch: 2
   description: "apk-tools (Wolfi package manager)"
   copyright:
     - license: GPL-2.0-only
@@ -22,6 +22,7 @@ environment:
       - openssl-dev
       - scdoc
       - zlib-dev
+      - zlib-static
 
 pipeline:
   - uses: git-checkout
@@ -65,6 +66,17 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr
           mv "${{targets.destdir}}"/usr/lib "${{targets.subpkgdir}}"/usr/lib
+
+  - name: "apk-tools-static"
+    description: "statically linked apk-tools"
+    pipeline:
+      - runs: |
+          make static
+          install -Dm755 src/apk.static ${{targets.subpkgdir}}/sbin/apk.static
+    test:
+      pipeline:
+        - runs: |
+            apk.static --version
 
 test:
   environment:
