Use patch pipeline, instead of cherry-pick of unmerged PR

--- a/openssl.yaml
+++ b/openssl.yaml
@@ -48,8 +48,10 @@ pipeline:
       repository: https://github.com/openssl/openssl
       tag: openssl-${{package.version}}
       expected-commit: 98acb6b02839c609ef5b837794e08d906d965335
-      cherry-picks: |
-        pull/25929/head/0c306cb74ae1de27abc873d5384d6d97be01353c: Force pre-v3.2 providers to use jitter entropy
+
+  - uses: patch
+    with:
+      patches: fix-jitter-old-providers.patch
 
   - name: Create dbg sourcecode
     runs: |
