--- a/resolv_wrapper.yaml
+++ b/resolv_wrapper.yaml
@@ -41,6 +41,11 @@ subpackages:
       pipeline:
         - uses: test/pkgconf
 
+  - name: ${{package.name}}-doc
+    pipeline:
+      - uses: split/manpages
+    description: ${{package.name}} manpages
+
 update:
   enabled: true
   release-monitor:
