use bdist_wheel instead of build
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/py3-requests-unixsocket.yaml
+++ b/py3-requests-unixsocket.yaml
@@ -25,7 +25,7 @@ pipeline:
       expected-commit: f4703e02e0c894ece5b2c5d69f647c9b8c3716db
 
   - runs: |
-      python3 setup.py build
+      python3 setup.py bdist_wheel
 
   - runs: |
       python3 setup.py install --prefix=/usr --root="${{targets.destdir}}" --skip-build
