experiment with py3.12
Signed-off-by: Mritunjay Sharma <mritunjay.sharma@chainguard.dev>

--- a/awx.yaml
+++ b/awx.yaml
@@ -7,7 +7,7 @@ package:
     - license: Apache-2.0
   dependencies:
     runtime:
-      - python-3.11
+      - python-3
 
 # To do- add py-twilio and py-zstd and hiredis-py
 environment:
@@ -22,8 +22,8 @@ environment:
       - npm
       - nvm
       - py3-sqlparse
-      - py3.11-pip
-      - python-3.11-dev
+      - py3-pip
+      - python-3-dev
       - zlib-dev
       - py3-aiohttp
       - py3-cffi
@@ -61,7 +61,12 @@ pipeline:
 
       mkdir -p ${{targets.contextdir}}/var/lib/awx
       python -m venv --system-site-packages  ${{targets.contextdir}}/var/lib/awx/venv
-      export VENV_BASE=${{targets.contextdir}} make requirements_awx
+      source ${{targets.contextdir}}/var/lib/awx/venv/bin/activate
+
+      ${{targets.contextdir}}/var/lib/awx/venv/bin/pip install --upgrade pip==21.2.4 setuptools==69.0.2 setuptools_scm[toml]==8.0.4 wheel==0.42.0 cython==0.29.37
+      export SRC_ONLY_PKGS="cffi,pycparser,psycopg,twilio"
+      export VENV_BASE=${{targets.contextdir}}/var/lib/awx 
+      make requirements_awx
 
       # Remove unnecessary cache files
       rm -rf ${{targets.destdir}}/var/lib/awx/venv/bin/__pycache*
@@ -72,15 +77,16 @@ pipeline:
       # Ensure system site packages are included by updating `pyvenv.cfg`
       sed -i "s|include-system-site-packages = false|include-system-site-packages = true|g" ${{targets.destdir}}/var/lib/awx/venv/pyvenv.cfg
 
-  - runs: |
-      # Front-end build
-      npm --prefix awx/ui run build
+  # - runs: |
+  #     # Front-end build
+  #     npm install react-scripts
+  #     npm --prefix awx/ui run build
 
-  - runs: |
-      mkdir -p ${{targets.destdir}}/app/awx-frontend
-      cp -r ./awx/ui/build ${{targets.destdir}}/app/awx-frontend/
-      cp manage.py MANIFEST.in README.md ${{targets.destdir}}/app/
-      cp awx/ui/package.json ${{targets.destdir}}/app/awx-frontend/
+  # - runs: |
+  #     mkdir -p ${{targets.destdir}}/app/awx-frontend
+  #     cp -r ./awx/ui/build ${{targets.destdir}}/app/awx-frontend/
+  #     cp manage.py MANIFEST.in README.md ${{targets.destdir}}/app/
+  #     cp awx/ui/package.json ${{targets.destdir}}/app/awx-frontend/
 
 update:
   enabled: true
