experiment with py3.11
Signed-off-by: Mritunjay Sharma <mritunjay.sharma@chainguard.dev>

--- a/awx.yaml
+++ b/awx.yaml
@@ -7,7 +7,7 @@ package:
     - license: Apache-2.0
   dependencies:
     runtime:
-      - python-3
+      - python-3.11
 
 # To do- add py-twilio and py-zstd and hiredis-py
 environment:
@@ -21,32 +21,32 @@ environment:
       - nodejs
       - npm
       - nvm
-      - py3-sqlparse
-      - py3-pip
-      - python-3-dev
+      - py3.11-sqlparse
+      - py3.11-pip
+      - python-3.11-dev
       - zlib-dev
-      - py3-aiohttp
-      - py3-cffi
-      - py3-charset-normalizer
-      - py3-pydantic-core
-      - py3-cryptography
-      - py3-cython
-      - py3-frozenlist
-      - py3-grpcio
-      - py3-lxml
-      - py3-markupsafe
-      - py3-maturin
-      - py3-msgpack
-      - py3-multidict
-      - py3-protobuf
-      - py3-psutil
-      - py3-psycopg
-      - py3-pycparser
-      - py3-rpds-py
-      - py3-wrapt
-      - py3-yarl
-      - py3-pyyaml
-      - py3-zope.interface
+      - py3.11-aiohttp
+      - py3.11-cffi
+      - py3.11-charset-normalizer
+      - py3.11-pydantic-core
+      - py3.11-cryptography
+      - py3.11-cython
+      - py3.11-frozenlist
+      - py3.11-grpcio
+      - py3.11-lxml
+      - py3.11-markupsafe
+      - py3.11-maturin
+      - py3.11-msgpack
+      - py3.11-multidict
+      - py3.11-protobuf
+      - py3.11-psutil
+      # - py3.11-psycopg
+      - py3.11-pycparser
+      - py3.11-rpds-py
+      - py3.11-wrapt
+      - py3.11-yarl
+      - py3.11-pyyaml
+      - py3.11-zope.interface
       - wolfi-base
 
 pipeline:
@@ -56,7 +56,17 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: 94e5795dfc37b95c576d61f3e3b4e936c021548c
 
-  - runs: |
+  - runs
+    # - runs: |
+    #     # Front-end build
+    #     npm install react-scripts
+    #     npm --prefix awx/ui run build
+
+    # - runs: |
+    #     mkdir -p ${{targets.destdir}}/app/awx-frontend
+    #     cp -r ./awx/ui/build ${{targets.destdir}}/app/awx-frontend/
+    #     cp manage.py MANIFEST.in README.md ${{targets.destdir}}/app/
+    #     cp awx/ui/package.json ${{targets.destdir}}/app/awx-frontend/: |
       # Back-end build
 
       mkdir -p ${{targets.contextdir}}/var/lib/awx
@@ -65,7 +75,7 @@ pipeline:
 
       ${{targets.contextdir}}/var/lib/awx/venv/bin/pip install --upgrade pip==21.2.4 setuptools==69.0.2 setuptools_scm[toml]==8.0.4 wheel==0.42.0 cython==0.29.37
       export SRC_ONLY_PKGS="cffi,pycparser,psycopg,twilio"
-      export VENV_BASE=${{targets.contextdir}}/var/lib/awx 
+      export VENV_BASE=${{targets.contextdir}}/var/lib/awx
       make requirements_awx
 
       # Remove unnecessary cache files
@@ -76,17 +86,6 @@ pipeline:
 
       # Ensure system site packages are included by updating `pyvenv.cfg`
       sed -i "s|include-system-site-packages = false|include-system-site-packages = true|g" ${{targets.destdir}}/var/lib/awx/venv/pyvenv.cfg
-
-  # - runs: |
-  #     # Front-end build
-  #     npm install react-scripts
-  #     npm --prefix awx/ui run build
-
-  # - runs: |
-  #     mkdir -p ${{targets.destdir}}/app/awx-frontend
-  #     cp -r ./awx/ui/build ${{targets.destdir}}/app/awx-frontend/
-  #     cp manage.py MANIFEST.in README.md ${{targets.destdir}}/app/
-  #     cp awx/ui/package.json ${{targets.destdir}}/app/awx-frontend/
 
 update:
   enabled: true
