--- a/superset.yaml
+++ b/superset.yaml
@@ -57,7 +57,7 @@ pipeline:
       pip install -r requirements/base.txt
 
       # To fix vulnerabilities
-      pip install --upgrade dnspython==2.6.1 gunicorn==22.0.0 idna==3.7 setuptools==70.0.0 sqlparse==0.5.0 Jinja2==3.1.4 requests==2.32.0 urllib3==1.26.19 certifi==2024.07.04 zipp==3.19.2 Werkzeug==3.0.6
+      pip install --upgrade dnspython==2.6.1 gunicorn==22.0.0 idna==3.7 setuptools==70.0.0 sqlparse==0.5.0 Jinja2==3.1.4 Werkzeug==3.0.6 requests==2.32.0 urllib3==1.26.19 certifi==2024.07.04 zipp==3.19.2
       # Dependencies required during runtime
       pip install pillow pyarrow
       # For running translations
@@ -98,7 +98,6 @@ update:
     - 'rc\d+$'
   github:
     identifier: apache/superset
-    use-tag: true
 
 test:
   pipeline:
