freerdp-3: add required dependencies

--- a/freerdp-3.yaml
+++ b/freerdp-3.yaml
@@ -29,6 +29,8 @@ environment:
       - icu-dev
       - krb5-dev
       - libjpeg-turbo-dev
+      - libsdl2-dev
+      - libsdl2-ttf-dev
       - libusb-dev
       - libx11-dev
       - libxcursor-dev
@@ -36,7 +38,6 @@ environment:
       - libxext-dev
       - libxi-dev
       - libxinerama-dev
-      # - libxkbfile-dev
       - libxkb-dev
       - libxkbcommon-dev
       - libxrender-dev
