--- a/superset.yaml
+++ b/superset.yaml
@@ -5,6 +5,9 @@ package:
   description: Data Visualization and Data Exploration Platform
   copyright:
     - license: Apache-2.0
+  resources:
+    cpu: 65
+    memory: 128Gi
   options:
     #  There is a dependency on libarrow-substrait.so although it
     #  is provided in the virtual environment. Enabling no-depends
