Add net-tools test

--- a/wolfi-baselayout.yaml
+++ b/wolfi-baselayout.yaml
@@ -126,6 +126,7 @@ test:
       packages:
         - bash
         - coreutils
+        - net-tools        
   pipeline:
     - name: "Files exist"
       runs: |
@@ -144,6 +145,22 @@ test:
         # instead of using ${{package.version}} we hardcode this here
         # because only the epoch should really ever change.
         grep 'VERSION_ID="20230201"' /etc/os-release
+    - runs: |
+        dnsdomainname --version
+        domainname --version
+        hostname --version
+        ifconfig --version
+        netstat --version
+        nisdomainname --version
+        route --version
+        ypdomainname --version
+        arp --version
+        ipmaddr --version
+        iptunnel --version
+        nameif --version
+        plipconfig --version
+        rarp --version
+        slattach --version
 
 update:
   enabled: false
